[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/frog.png" type="Texture" id=1]
[ext_resource path="res://BallHitter.gd" type="Script" id=2]
[ext_resource path="res://Frog.gd" type="Script" id=3]
[ext_resource path="res://Foot.tscn" type="PackedScene" id=4]

[sub_resource type="PhysicsMaterial" id=1]
rough = true
bounce = 0.25

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.0
height = 2.0

[sub_resource type="CircleShape2D" id=4]
radius = 5.0

[sub_resource type="CircleShape2D" id=5]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 2.0
height = 6.0

[node name="Frog" type="RigidBody2D"]
collision_layer = 2
collision_mask = 1059
mass = 0.5
physics_material_override = SubResource( 1 )
gravity_scale = 3.0
angular_damp = 2.5
script = ExtResource( 3 )
leg_color = Color( 0, 0.521569, 0.380392, 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource( 2 )

[node name="LFoot" parent="." instance=ExtResource( 4 )]
position = Vector2( -8, 6.5 )

[node name="RFoot" parent="." instance=ExtResource( 4 )]
position = Vector2( 8, 6.5 )
left = false
input_action = "right_foot"

[node name="ObjectCollider" type="StaticBody2D" parent="."]
collision_layer = 6
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectCollider"]
z_index = 1
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ObjectCollider"]
position = Vector2( -3, 3 )
z_index = 1
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ObjectCollider"]
position = Vector2( 3, 3 )
z_index = 1
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ObjectCollider"]
position = Vector2( 3, -4 )
z_index = 1
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="ObjectCollider"]
position = Vector2( -3, -4 )
z_index = 1
shape = SubResource( 5 )

[node name="LeftHipCollider" type="StaticBody2D" parent="."]
collision_layer = 6
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftHipCollider"]
z_index = 1
shape = SubResource( 6 )

[node name="LeftKneeCollider" type="StaticBody2D" parent="."]
collision_layer = 6
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftKneeCollider"]
z_index = 1
shape = SubResource( 6 )

[node name="RightHipCollider" type="StaticBody2D" parent="."]
collision_layer = 6
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightHipCollider"]
z_index = 1
shape = SubResource( 6 )

[node name="RightKneeCollider" type="StaticBody2D" parent="."]
collision_layer = 6
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightKneeCollider"]
z_index = 1
shape = SubResource( 6 )

[node name="AiCycle" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25

[connection signal="timeout" from="AiCycle" to="." method="_on_AiCycle_timeout"]
